--- a/site/documentation/sugarcoat/styles/base/768.scss
+++ b/site/documentation/sugarcoat/styles/base/768.scss
@@ -8,7 +8,7 @@
 }
 .sugar-masthead {
     padding-top: 0;
-    
+
     h1 {
         font-size: 2rem;
     }
@@ -17,10 +17,11 @@
     width: 75%;
     margin: 0 0 0 25%;
     padding: 0;
-    
+
     section {
         padding: 2rem;
         border-bottom: $border;
+        box-sizing: border-box;
     }
     .sugar-masthead {
         display: none;
